// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<header
  className="details__header"
>
  <div
    className="details__header-title"
  >
    <div
      title="Title"
    >
      FitBoundButton
    </div>
    <h2
      className="details__title"
    >
      Title
    </h2>
  </div>
  <div>
    ExportFiles
  </div>
</header>
`;

exports[`should render correctly with documents 1`] = `
<header
  className="details__header"
  documents={
    Array [
      Object {
        "download_url": "path/to/file",
        "template_file": "foo.pdf",
        "template_name": "foo",
      },
    ]
  }
>
  <div
    className="details__header-title"
  >
    <div
      title="Title"
    >
      FitBoundButton
    </div>
    <h2
      className="details__title"
    >
      Title
    </h2>
  </div>
  <div>
    ExportFiles
  </div>
</header>
`;
